--- a/package.json
+++ b/package.json
@@ -167,6 +167,7 @@
     "@types/react-router-dom": "^5.3.2",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/react-window": "^1.8.5",
+    "comlink": "^4.3.1",
     "cypress": "^8.1.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -182,6 +183,7 @@
     "web3-utils": "^1.5.2",
     "webpack": "5.65.0",
     "webpack-subresource-integrity": "^5.0.0",
+    "worker-loader": "^3.0.8",
     "yarn-minify": "^1.0.1"
   },
   "resolutions": {
